fixed overflow problem on firefox and changed hover effects in header menu

--- a/dev/styles/partials/_contact.scss
+++ b/dev/styles/partials/_contact.scss
@@ -1,6 +1,5 @@
 .contact {
-	margin-bottom: -150px;
-	padding: 150px 0;
+	padding: 150px 0 0;
 	position: relative;
 	overflow: hidden;
 	height: 700px;
@@ -11,14 +10,14 @@
 		transform: rotate(5deg);
 		position: absolute;
 		width: 200%;
-		height: 80%;
-		top: 8%;
+		height: 100%;
+		top: 10%;
 		left: -50%;
 	}
 
 	&__wrapper {
 		z-index: 20;
-		padding: 75px 30px 0;
+		padding: 150px 30px 0;
 	}
 
 	&__title {
@@ -33,6 +32,10 @@
 
 		a {
 			display: inline-block;
+
+			&:hover {
+				color: #999;
+			}
 		}
 	}
 
@@ -58,5 +61,3 @@
 		}
 	}
 }
-
-
