--- a/dev/styles/partials/_global.scss
+++ b/dev/styles/partials/_global.scss
@@ -38,10 +38,6 @@ a {
 	display: block;
 	text-decoration: none;
 	color: $bl;
-
-	&:hover {
-		color: $primary;
-	}
 }
 
 
