--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -5,6 +5,12 @@
 	position: fixed;
 	width: 100%;
 	z-index: 50;
+	background-color: $bl;
+	color: $primary;
+
+	.wrapper {
+		grid-template-columns: 1fr minmax(300px,1300px) 1fr;
+	}
 
 	&__mobile-menu {
 		display:none;
@@ -144,7 +150,7 @@
 
 		.desktop-menu {
 			grid-column: 2;
-			padding-right: 20px;
+			padding-right: 0px;
 		}
 
 	}
@@ -172,9 +178,33 @@
 			text-align: center;
 			color: $primary;
 			letter-spacing: 2px;
+			position: relative;
 
-			&:hover {
-				font-weight: 800;
+			&::before {
+				content: "";
+				position: absolute;
+				width: 100%;
+				height: 2px;
+				bottom: -3px;
+				left: 0;
+				background-color: $primary;
+				transform: scaleX(0);
+				transition: all 0.3s ease-in-out 0s;
+			}
+
+			&:hover::before {
+				transform: scaleX(1);
+			}
+		}
+	}
+
+	&.background-change {
+		background-color: rgba(3,218,197, 0.9);
+		a {
+			color: $bl;
+
+			&::before {
+				background-color: $bl;
 			}
 		}
 	}
